[gd_scene load_steps=35 format=3 uid="uid://b5361lhis2keq"]

[ext_resource type="Script" path="res://enemy/CAC/policeman.gd" id="1_ep12o"]
[ext_resource type="Shader" path="res://Shaders/ennemy_shader.gdshader" id="2_3gwr0"]
[ext_resource type="Script" path="res://Scripts/Components/stats_component.gd" id="3_jerbp"]
[ext_resource type="Texture2D" uid="uid://c1msm7hb4qwdv" path="res://Assets/Foe/policeman_v2/policeman_attack.png" id="3_q38dy"]
[ext_resource type="Script" path="res://Scripts/Components/hurt_component.gd" id="4_5v3yc"]
[ext_resource type="Texture2D" uid="uid://ige1fdc7cnhw" path="res://Assets/Foe/policeman_v2/policeman_walk.png" id="4_bsq02"]
[ext_resource type="Script" path="res://Scripts/Components/destroyed_component.gd" id="5_ujq53"]
[ext_resource type="Script" path="res://Scripts/Components/ennemies_stats_component.gd" id="6_mv1df"]
[ext_resource type="Script" path="res://Scripts/Components/spawn_component.gd" id="7_vdcvc"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox_component.gd" id="8_psded"]
[ext_resource type="PackedScene" uid="uid://c44phjt3qn2wl" path="res://experience/experience.tscn" id="9_qvhfe"]
[ext_resource type="AudioStream" uid="uid://dx62q1hdok5tu" path="res://Audio/Mob_sound/shotgun.wav" id="11_1tsay"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_11v6f"]
radius = 5.0
height = 22.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t3v5l"]
resource_local_to_scene = true
shader = ExtResource("2_3gwr0")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0
shader_parameter/shake_power = 0.0
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.0
shader_parameter/is_flash = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_vhkon"]
atlas = ExtResource("3_q38dy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyrw1"]
atlas = ExtResource("3_q38dy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhktu"]
atlas = ExtResource("3_q38dy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vkb0"]
atlas = ExtResource("3_q38dy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8c3m"]
atlas = ExtResource("3_q38dy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2y5w"]
atlas = ExtResource("3_q38dy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wymm"]
atlas = ExtResource("3_q38dy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7w6y"]
atlas = ExtResource("3_q38dy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ihs"]
atlas = ExtResource("4_bsq02")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0onc"]
atlas = ExtResource("4_bsq02")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p8jx"]
atlas = ExtResource("4_bsq02")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvsd0"]
atlas = ExtResource("4_bsq02")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsgmr"]
atlas = ExtResource("4_bsq02")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r16sy"]
atlas = ExtResource("4_bsq02")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_505ti"]
atlas = ExtResource("4_bsq02")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_obmb0"]
atlas = ExtResource("4_bsq02")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kripp"]
atlas = ExtResource("4_bsq02")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6f620"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhkon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyrw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhktu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vkb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8c3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2y5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wymm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7w6y")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ihs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0onc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p8jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvsd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsgmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r16sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_505ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obmb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kripp")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5tscf"]
radius = 13.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44vdk"]
height = 32.0

[node name="policeman" type="CharacterBody2D" node_paths=PackedStringArray("stats")]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ep12o")
stats = NodePath("EnnemiesStatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 3)
shape = SubResource("CapsuleShape2D_11v6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_t3v5l")
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_6f620")
animation = &"attack"
metadata/_edit_lock_ = true

[node name="range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="DetectionR" type="CollisionShape2D" parent="range"]
position = Vector2(11, 3)
shape = SubResource("CapsuleShape2D_5tscf")

[node name="DetectionL" type="CollisionShape2D" parent="range"]
position = Vector2(-13, 3)
shape = SubResource("CapsuleShape2D_5tscf")

[node name="Timer" type="Timer" parent="."]

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3_jerbp")
health = 5

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("4_5v3yc")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("5_ujq53")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnComponent")

[node name="EnnemiesStatsComponent" type="Node" parent="."]
script = ExtResource("6_mv1df")

[node name="SpawnComponent" type="Node2D" parent="."]
script = ExtResource("7_vdcvc")
scene = ExtResource("9_qvhfe")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("8_psded")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, 4)
shape = SubResource("CapsuleShape2D_44vdk")

[node name="shotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_1tsay")
volume_db = -22.459

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
